--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width">
     <title>Astronauts</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script>
+      window.addEventListener("load", function(){
+
+        fetch("https://handlers.education.launchcode.org/static/astronauts.json").then(function(response){
+          response.json().then(function(json){
+         
+            const container = document.getElementById("container");
+            for (let i=0; i<json.length; i++){
+
+              container.innerHTML = container.innerHTML + `
+                <div>
+                   <div>
+                     <h3>${json[i].firstName} ${json[i].lastName}</h3>
+                  <ul>
+              <li>Hours in space: ${json[i].hoursInSpace}</li>
+              <li>active: ${json[i].active}</li>
+              <li>skills: ${json[i].skills}</li>
+            </ul>
+            </div>
+            <img src = ${json[i].picture}>
+          </div>
+        `
+      }
+    });
+  });
+});
+  </script>
   </head>
   <body>
     <script src="script.js"></script>
